fixed overflow

--- a/source/_assets/sass/main.scss
+++ b/source/_assets/sass/main.scss
@@ -16,6 +16,7 @@
 
 html {
   overflow-x: hidden;
+  max-width: 100vw;
 }
 
 h1 {
